methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
droite()
droite()
droite()
droite()
droite()
droite()
droite()
droite()

  
}